P9.1: Forensic dossier with PDF export, P10.1: Streaming multilingual ASR, P8.2: Voice Passport with consent & erasure